Make the JVM-flags hint copyable: selectable status pane + terminal print
The macOS fallback message ("to embed slides here, relaunch with:
JADX_GUI_OPTS=…") lived in a JLabel, so the command could not be
drag-selected. The status area is now a non-editable JEditorPane
(GridBag-wrapped to keep the old centering), and the same relaunch
command is printed once per process to the terminal jadx was started
from — at plugin load, before a deck is even opened.

statusWrap is a construction-time field, so the quit-path detach still
loads no classes lazily (verified with javap -c: the DetachRun preload
ldc survives and doDetach references only fields).

Verified headlessly: ServiceLoader load, status pane selection returns
the command text, hint prints once and stays silent on the second call.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XRBy4G7h31qY6u3pG8oE6W